<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_margin="5dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <!--
        items for a single row of RecyclerView
        -->
<!--        <Button-->
<!--            android:id="@+id/btn_selectPatient"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content">-->

            <TextView
                android:id="@+id/firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textColor="#000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/village"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/village"
                android:textColor="#000"
                android:textSize="15sp" />
<!--        </Button>-->

    </LinearLayout>
</androidx.cardview.widget.CardView>