<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#0B85C8">


        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/rounded_edittext_style"
            android:padding="10dp">
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    app:srcCompat="@drawable/ind_bumps"/>
                <CheckBox
                    android:id="@+id/chkSmallSpots"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:text="@string/small_red_spots"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </RelativeLayout>


        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/rounded_edittext_style"
            android:padding="10dp">
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    app:srcCompat="@drawable/large_rash"/>
                <CheckBox
                    android:id="@+id/chkLargePatches"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:text="@string/large_patches"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </RelativeLayout>



        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/rounded_edittext_style"
            android:padding="10dp">
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    app:srcCompat="@drawable/multiple_scaley"/>
                <CheckBox
                    android:id="@+id/SmallScaley"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:text="@string/small_scaley"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </RelativeLayout>


        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/rounded_edittext_style"
            android:padding="10dp">
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    app:srcCompat="@drawable/red_dots"/>
                <CheckBox
                    android:id="@+id/chkClustered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                     />
                <TextView
                    android:text="@string/clustered_Red_spots"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </RelativeLayout>


        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/rounded_edittext_style"
            android:padding="10dp">
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="right"
                    app:srcCompat="@drawable/scaley"/>
                <CheckBox
                    android:id="@+id/chkSingleScaley"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                     />
                <TextView
                    android:text="@string/single_scaley"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>


        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/rounded_edittext_style"
            android:padding="10dp">
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/layout1">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:id="@+id/im1"
                    app:srcCompat="@drawable/small_bumps"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/chkMixture" />
                <TextView
                    android:text="@string/mixture"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt1"/>
            </LinearLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/btnSubmitRashType"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:padding="15dp"
            android:text="@string/button_next"
            android:textColor="#ffffff"
            android:textSize="25sp" />
    </LinearLayout>

</ScrollView>